feat: 메인 섹션 인터랙션 추가

--- a/pb/main.html
+++ b/pb/main.html
@@ -33,9 +33,10 @@
 	<script src="../resource/www/js/plugins/lenis.min.js"></script>
 	<script src="../resource/www/js/plugins/gsap.min.js"></script>
 	<script src="../resource/www/js/plugins/ScrollTrigger.js"></script>
-	<script src="../resource/www/js/plugins/SplitText.min.js"></script>
-	<script src="../resource/www/js/plugins/aos.js"></script>
 	<script src="../resource/www/js/plugins/countUp.umd.js"></script>
+	<script src="../resource/www/js/plugins/pathseg.min.js"></script>
+	<script src="../resource/www/js/plugins/matter.min.js"></script>
+	<script src="../resource/www/js/plugins/aos.js"></script>
 	<script src="../resource/www/js/common.js"></script>
 	<!-- //script -->
 </head>
@@ -83,23 +84,63 @@
 			</div>
 		</header>
 		<main class="main">
+			<!-- S:main-vi -->
 			<section class="main-vi">
 				<div class="inner-padding main-vi__inner-padding">
 					<div class="main-vi__top">
 						<h2 class="main-vi__slogan">
 							<div class="main-vi__slogan-line">
-								<div class="main-vi__slogan-one">
-									<span class="main-vi__slogan-icon"></span>
-									ne
+								<div class="main-vi__slogan-word">
+									<span class="main-vi__slogan-icon">
+										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 75.68 76.68">
+											<defs>
+												<style>
+													.cls-1 {
+														fill: #fff;
+													}
+												</style>
+											</defs>
+											<path class="cls-1"
+												d="M64.54,23.1c2.79,4.72,4.28,10.12,4.28,15.74,0,17.08-13.89,30.98-30.98,30.98S6.87,55.92,6.87,38.84c0-5.62,1.49-11.01,4.28-15.73l-4.98-4.98C2.15,24.24,0,31.37,0,38.84c0,20.87,16.98,37.84,37.84,37.84s37.84-16.97,37.84-37.84c0-7.47-2.15-14.61-6.16-20.72l-4.98,4.98Z" />
+											<path class="cls-1"
+												d="M68.27,14.68l-.58-.7c-.74-.9-1.52-1.75-2.38-2.61h0C57.96,4.04,48.21,0,37.84,0c-7.05,0-13.94,1.9-19.93,5.49-.54.33-1.07.66-1.62,1.02-.52.36-1.05.72-1.54,1.09-.73.53-1.46,1.12-2.26,1.8-.76.66-1.45,1.31-2.12,1.98-.88.88-1.66,1.74-2.38,2.61l-.57.7,30.41,30.41,30.43-30.42ZM24.28,12.09c4.72-2.39,10.08-3.51,15.35-3.18.34.02.67.04,1.07.08,4.23.45,8.37,1.74,12.07,3.85,1,.57,1.98,1.19,2.89,1.89l-17.84,17.84S20.02,14.74,20.02,14.74c1.34-1.01,2.77-1.89,4.27-2.65Z" />
+										</svg>
+									</span>
+									<em class="char--reveal">n</em>
+									<em class="char--reveal">e</em>
 								</div>
-								<span class="main-vi__slogan-word">Brand</span>
+								<span class="main-vi__slogan-word">
+									<em>B</em>
+									<em class="char--reveal">r</em>
+									<em class="char--reveal">a</em>
+									<em class="char--reveal">n</em>
+									<em class="char--reveal">d</em>
+								</span>
 							</div>
 							<div class="main-vi__slogan-line">
-								<div class="main-vi__slogan-one">
-									<span class="main-vi__slogan-icon"></span>
-									ne
+								<div class="main-vi__slogan-word">
+									<span class="main-vi__slogan-icon">
+										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 75.68 76.68">
+											<defs>
+												<style>
+													.cls-1 {
+														fill: #fff;
+													}
+												</style>
+											</defs>
+											<path class="cls-1"
+												d="M64.54,23.1c2.79,4.72,4.28,10.12,4.28,15.74,0,17.08-13.89,30.98-30.98,30.98S6.87,55.92,6.87,38.84c0-5.62,1.49-11.01,4.28-15.73l-4.98-4.98C2.15,24.24,0,31.37,0,38.84c0,20.87,16.98,37.84,37.84,37.84s37.84-16.97,37.84-37.84c0-7.47-2.15-14.61-6.16-20.72l-4.98,4.98Z" />
+											<path class="cls-1"
+												d="M68.27,14.68l-.58-.7c-.74-.9-1.52-1.75-2.38-2.61h0C57.96,4.04,48.21,0,37.84,0c-7.05,0-13.94,1.9-19.93,5.49-.54.33-1.07.66-1.62,1.02-.52.36-1.05.72-1.54,1.09-.73.53-1.46,1.12-2.26,1.8-.76.66-1.45,1.31-2.12,1.98-.88.88-1.66,1.74-2.38,2.61l-.57.7,30.41,30.41,30.43-30.42ZM24.28,12.09c4.72-2.39,10.08-3.51,15.35-3.18.34.02.67.04,1.07.08,4.23.45,8.37,1.74,12.07,3.85,1,.57,1.98,1.19,2.89,1.89l-17.84,17.84S20.02,14.74,20.02,14.74c1.34-1.01,2.77-1.89,4.27-2.65Z" />
+										</svg>
+									</span>
+									<em class="char--reveal">n</em>
+									<em class="char--reveal">e</em>
 								</div>
-								<span class="main-vi__slogan-word">AI</span>
+								<span class="main-vi__slogan-word">
+									<em>A</em>
+									<em class="char--reveal">I</em>
+								</span>
 							</div>
 						</h2>
 						<p class="main-vi__desc main-vi__desc--ko">
@@ -107,12 +148,19 @@
 							기획부터 기술, 디자인, 수익화까지 끝까지 책임지는 브랜드 — 그게 바로 오보아입니다.
 						</p>
 					</div>
-					<p class="main-vi__desc main-vi__desc--en">
-						Be the first name <span class="main-vi__underline"></span> that comes to mind <br>
-						when starting a business.
-					</p>
+					<div class="main-vi__bottom">
+						<p class="main-vi__desc main-vi__desc--en">
+							Be the first name <span class="main-vi__underline"></span> that comes to mind <br>
+							when starting a business.
+						</p>
+					</div>
+				</div>
+				<div class="main-vi__bg">
+					<div id="main-vi__container"></div>
 				</div>
 			</section>
+			<!-- E:main-vi -->
+
 			<!-- S:philosophy -->
 			<section class="section philosophy">
 				<div class="inner-padding philosophy__inner-padding">
@@ -334,7 +382,7 @@
 
 			<!-- S:education -->
 			<section class="section education">
-				<div class="inner-padding">
+				<div class="inner-padding education__inner-padding">
 					<h3 class="sec__label sec__label--light">
 						<i>
 							<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -620,7 +668,7 @@
 
 			<!-- S:vision -->
 			<section class="section vision">
-				<div class="inner-padding">
+				<div class="inner-padding vision__inner-padding">
 					<h2 class="sec__tit sec__tit--st3 vision__tit">AI is real – Build smarter brands, <br> not just
 						digital ones.</h2>
 				</div>
@@ -657,62 +705,18 @@
 
 			<!-- S:skill -->
 			<section class="section skill">
-				<div class="inner-padding">
+				<div class="inner-padding skill__inner-padding">
 					<h2 class="sec__tit sec__tit--st1 skill__tit">All-in-One <br> AI Business Solutions</h2>
 					<h2 class="sec__desc sec__desc--st2">From branding to backend – everything under one roof.</h2>
 				</div>
-				<div class="skill__stack">
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-react.svg" alt=""></i>
-						React
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-nextjs.svg" alt=""></i>
-						Next.js
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-ts.svg" alt=""></i>
-						TypeScript
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-flutter.svg" alt=""></i>
-						Flutter
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-firebase.svg" alt=""></i>
-						Firebase
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-aws.svg" alt=""></i>
-						AWS
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-supabase.svg" alt=""></i>
-						supabase
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-postgresql.svg" alt=""></i>
-						PostgreSQL
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-react.svg" alt=""></i>
-						React Native
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-springboot.svg" alt=""></i>
-						Spring Boot
-					</div>
-					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-nodejs.svg" alt=""></i>
-						Node.js
-					</div>
-
+				<div class="skill__bg">
+					<div id="skill__container"></div>
 				</div>
-				<div class="skill__media">
+				<!-- <div class="skill__media">
 					<video class="skill__video video" autoplay muted loop playsinline>
 						<source src="../resource/www/img/main/video_skill.mp4" type="video/mp4" />
 					</video>
-				</div>
+				</div> -->
 			</section>
 			<!-- E:skill -->
 
@@ -822,24 +826,250 @@
 	<!-- //E:wrap -->
 	<script>
 		$(function () {
-
-			// Register ScrollTrigger plugin once
+			// === Register ScrollTrigger plugin ===
 			if (gsap && ScrollTrigger) {
 				gsap.registerPlugin(ScrollTrigger);
 			}
 
-			// === CountUp ===
-			[ 
-				{ id: 'count01', endVal: 15, opts: { enableScrollSpy: true, suffix: '+' } },
-				{ id: 'count02', endVal: 400, opts: { enableScrollSpy: true, suffix: '+' } },
-				{ id: 'count03', endVal: 15, opts: { enableScrollSpy: true, suffix: '+' } },
-				{ id: 'count04', endVal: 4.9, opts: { enableScrollSpy: true, decimalPlaces: 1 } }
+			// === Main Visual Section ===
+			// oboa 텍스트, 헤더
+			window.addEventListener('load', () => {
+				const tl = gsap.timeline();
+				// 1. 슬로건 가운데 위치 세팅
+				gsap.set('.main-vi__top', {
+					yPercent: -50,
+					top: '50%',
+					position: 'absolute',
+					left: '50%',
+					xPercent: -50,
+					opacity: 1
+				});
+				// 2. 등장해야 할 글자들 초기 숨김 
+				gsap.set('.main-vi__slogan .char--reveal', {
+					width: 0,
+					opacity: 0
+				});
+				// 3. 슬로건 위로 이동
+				tl.to('.main-vi__top', {
+						yPercent: 0,
+						top: '10%',
+						duration: 1,
+						ease: 'power3.inOut'
+					})
+					// 4. 숨겨졌던 글자들 순차적으로 등장
+					.to('.main-vi__slogan .char--reveal', {
+						width: 'auto',
+						opacity: 1,
+						duration: 0.5,
+						stagger: 0.1,
+						ease: 'power4.out'
+					}, '+=0.3')
+					// 5. 헤더 등장
+					.to('.header', {
+						y: 0,
+						opacity: 1,
+						duration: 0.6,
+						ease: 'power2.out'
+					}, '+=0.2')
+					// 5.5 Matter.js 시작 트리거!
+					.call(() => {
+						initMainViMatter();
+					}, null, '+=0.2')
+					// 6. 한글 설명 텍스트 등장
+					.to('.main-vi__desc--ko', {
+						y: 0,
+						opacity: 1,
+						duration: 0.6,
+						ease: 'power2.out'
+					}, '+=0.2')
+					// 7. 영어 설명 텍스트 등장
+					.to('.main-vi__desc--en', {
+						y: 0,
+						opacity: 1,
+						duration: 0.6,
+						ease: 'power2.out'
+					}, '+=0.4')
+					// 8. 영어 설명 텍스트 underline 효과
+					.to('.main-vi__desc--en .main-vi__underline', {
+						width: '50px',
+						duration: 0.5,
+						ease: 'power2.out'
+					}, '+=0.2');
+			});
+
+			// 3d요소 stack, draggable
+			function initMainViMatter() {
+				const {
+					Engine,
+					Render,
+					Runner,
+					Bodies,
+					Composite,
+					Mouse,
+					MouseConstraint,
+					Svg
+				} = Matter;
+
+				const container = document.getElementById('main-vi__container');
+
+				const engine = Engine.create();
+				const world = engine.world;
+
+				const render = Render.create({
+					element: container,
+					engine: engine,
+					options: {
+						width: container.offsetWidth,
+						height: container.offsetHeight,
+						background: 'transparent',
+						wireframes: false
+					}
+				});
+
+				Render.run(render);
+
+				const runner = Runner.create();
+				Runner.run(runner, engine);
+
+				const canvasWidth = container.offsetWidth;
+				const canvasHeight = container.offsetHeight;
+				const wallThickness = 50;
+
+				// 이미지 + path + 마찰 배열
+				const startX = 200;
+				const gap = 250;
+				const startY = 100;
+
+				const frictionDefaults = [0.05, 0.1, 0.01, 0.1, 0.01, 0.05];
+
+				const items = [{
+						path: "M115 0L229.315 194.25H0.684647L115 0Z",
+						texture: '../resource/www/img/main/img_main-obj02.svg'
+					},
+					{
+						path: "M128.485 0.147423L259.003 72.1331L261.124 219.824L132.728 295.529L2.20955 223.543L0.0879428 75.8525L128.485 0.147423Z",
+						texture: '../resource/www/img/main/img_main-obj06.svg'
+					},
+					{
+						path: "M0 0 H263 V377 H0 Z", // 3
+
+						texture: '../resource/www/img/main/img_main-obj01.svg'
+					},
+					{
+						path: "M0 0 H406 V400 H0 Z", // 4
+						texture: '../resource/www/img/main/img_main-obj03.svg'
+					},
+					{
+						path: "M360.784 0 L360.784 198 L0 198 L0 0 Z", // 5
+						texture: '../resource/www/img/main/img_main-obj04.svg'
+					},
+					{
+						path: "M0 0 H336 V304 H0 Z", // 6
+						texture: '../resource/www/img/main/img_main-obj05.svg'
+					}
+				];
+
+				items.forEach((item, i) => {
+					if (!item.path) return; // path 비어 있으면 생략
+
+					const pathEl = document.createElementNS("http://www.w3.org/2000/svg", "path");
+					pathEl.setAttribute("d", item.path);
+
+					const vertices = Svg.pathToVertices(pathEl, 15);
+
+					const body = Bodies.fromVertices(startX + i * gap, startY, vertices, {
+						frictionAir: frictionDefaults[i],
+						render: {
+							sprite: {
+								texture: item.texture,
+								xScale: 1,
+								yScale: 1
+							}
+						}
+					}, true);
+
+					Composite.add(world, body);
+				});
+
+				// 벽
+				Composite.add(world, [
+					Bodies.rectangle(canvasWidth / 2, -wallThickness / 2, canvasWidth, wallThickness, {
+						isStatic: true
+					}), // top
+					Bodies.rectangle(canvasWidth / 2, canvasHeight + wallThickness / 2, canvasWidth,
+						wallThickness, {
+							isStatic: true
+						}), // bottom
+					Bodies.rectangle(-wallThickness / 2, canvasHeight / 2, wallThickness, canvasHeight, {
+						isStatic: true
+					}), // left
+					Bodies.rectangle(canvasWidth + wallThickness / 2, canvasHeight / 2, wallThickness,
+						canvasHeight, {
+							isStatic: true
+						}) // right
+				]);
+
+				// 마우스 컨트롤
+				const mouse = Matter.Mouse.create(render.canvas);
+				const mouseConstraint = Matter.MouseConstraint.create(engine, {
+					mouse: mouse,
+					element: render.canvas,
+					constraint: {
+						stiffness: 0.2,
+						render: {
+							visible: false
+						}
+					}
+				});
+				mouse.element.removeEventListener('wheel', mouse.mousewheel);
+				mouse.element.removeEventListener('DOMMouseScroll', mouse.mousewheel);
+				
+				Composite.add(world, mouseConstraint);
+				render.mouse = mouse;
+			}
+
+
+
+			// === CountUp Section ===
+			[{
+					id: 'count01',
+					endVal: 15,
+					opts: {
+						enableScrollSpy: true,
+						suffix: '+'
+					}
+				},
+				{
+					id: 'count02',
+					endVal: 400,
+					opts: {
+						enableScrollSpy: true,
+						suffix: '+'
+					}
+				},
+				{
+					id: 'count03',
+					endVal: 15,
+					opts: {
+						enableScrollSpy: true,
+						suffix: '+'
+					}
+				},
+				{
+					id: 'count04',
+					endVal: 4.9,
+					opts: {
+						enableScrollSpy: true,
+						decimalPlaces: 1
+					}
+				}
 			].forEach(cfg => {
 				const c = new countUp.CountUp(cfg.id, cfg.endVal, cfg.opts);
 				if (c.error) console.error(c.error);
 			});
 
 			// === AI Section ===
+			// 이미지 마스크 너비 확장
 			gsap.to(".ai__image-mask", {
 				width: 160,
 				ease: "none",
@@ -852,6 +1082,7 @@
 			});
 
 			// === Studio Section ===
+			// 스튜디오 제목 왼쪽으로 이동
 			gsap.to(".studio__tit", {
 				xPercent: -170,
 				x: "-20vw",
@@ -875,6 +1106,7 @@
 						anticipatePin: 1
 					}
 				})
+				// 1. 정중앙 콘텐츠 박스를 작게 축소
 				.fromTo(".commerce__center", {
 					width: "100vw",
 					height: "100vh"
@@ -883,10 +1115,12 @@
 					height: "600px",
 					ease: "power2.out"
 				})
+				// 2. 배경색 흰색으로 변경
 				.to(".commerce", {
 					backgroundColor: "#fff",
 					ease: "none"
 				}, 0)
+				// 3. 내부 요소들 위로 등장
 				.to([".commerce .sec__label", ".commerce .commerce__tit", ".commerce .more-btn"], {
 					opacity: 1,
 					y: 0,
@@ -895,6 +1129,7 @@
 				}, 0);
 
 			// === Education Section ===
+			// 1. Split box에 막대(div) 생성 및 랜덤 너비 지정
 			$('.education .split .bx').each(function () {
 				const $box = $(this);
 				const count = 30;
@@ -918,12 +1153,13 @@
 				});
 			});
 
+			// 2. Education 효과 순차 등장
 			gsap.timeline({
 					scrollTrigger: {
 						trigger: '.education',
 						start: 'top bottom',
 						toggleActions: 'play none none reverse',
-						onEnter: () => ScrollTrigger.refresh(),
+						onEnter: () => ScrollTrigger.refresh()
 					}
 				})
 				.to('.education .split .bx:nth-child(1) div', {
@@ -958,6 +1194,7 @@
 				}, '-=90%');
 
 			// === Review Swiper Section ===
+			// 1. Swiper 초기화
 			const multiplier = {
 				translate: 0.1,
 				rotate: 0.01
@@ -974,14 +1211,13 @@
 					clickable: true
 				}
 			});
-
+			// 2. 각 슬라이드에 회전 및 y 이동 효과
 			let lastFrame = 0;
 
 			function calculateWheel() {
 				const now = performance.now();
-				if (now - lastFrame < 16) return; // ~60fps throttle
+				if (now - lastFrame < 16) return;
 				lastFrame = now;
-
 				document.querySelectorAll('.review__swiper .inner').forEach(slide => {
 					const rect = slide.getBoundingClientRect();
 					const r = window.innerWidth * 0.5 - (rect.x + rect.width * 0.5);
@@ -991,17 +1227,130 @@
 					slide.style.transformOrigin = r < 0 ? 'left top' : 'right top';
 				});
 			}
-
+			// 3. frame loop 시작
 			function raf() {
 				requestAnimationFrame(raf);
 				calculateWheel();
 			}
 			raf();
 
+
+			// === skill Section ===
+			function initSkillMatter() {
+				const container = document.getElementById('skill__container');
+				const {
+					Engine,
+					Render,
+					Runner,
+					Bodies,
+					Composite,
+					Mouse,
+					MouseConstraint
+				} = Matter;
+
+				const engine = Engine.create();
+				const world = engine.world;
+
+				const render = Render.create({
+					element: container,
+					engine: engine,
+					options: {
+						width: container.offsetWidth,
+						height: container.offsetHeight,
+						background: 'transparent',
+						wireframes: false
+					}
+				});
+
+				Render.run(render);
+				Runner.run(Runner.create(), engine);
+
+				const w = container.offsetWidth;
+				const h = container.offsetHeight;
+				const wall = 50;
+				const startY = 100;
+
+				// === 이미지 리스트 (스프라이트) ===
+				const textures = Array.from({
+						length: 11
+					}, (_, i) =>
+					`../resource/www/img/main/img_skill-${String(i + 1).padStart(2, '0')}.svg`
+				);
+
+				textures.forEach((src) => {
+					const body = Bodies.rectangle(
+						Math.random() * w,
+						startY + Math.random() * 200, // ← 자연스럽게 떨어지게
+						100,
+						100, {
+							restitution: 0.8,
+							frictionAir: 0.05,
+							render: {
+								sprite: {
+									texture: src,
+									xScale: 1,
+									yScale: 1
+								}
+							}
+						}
+					);
+					Composite.add(world, body);
+				});
+
+				// === 벽: 상/하/좌/우 모두 추가 ===
+				Composite.add(world, [
+					Bodies.rectangle(w / 2, -wall / 2, w, wall, {
+						isStatic: true
+					}), // top
+					Bodies.rectangle(w / 2, h + wall / 2, w, wall, {
+						isStatic: true
+					}), // bottom
+					Bodies.rectangle(-wall / 2, h / 2, wall, h, {
+						isStatic: true
+					}), // left
+					Bodies.rectangle(w + wall / 2, h / 2, wall, h, {
+						isStatic: true
+					}) // right
+				]);
+
+				// === 마우스 드래그 ===
+				const mouse = Mouse.create(render.canvas); // ← main과 동일하게 body 기준
+				const mouseConstraint = MouseConstraint.create(engine, {
+					mouse: mouse,
+					constraint: {
+						stiffness: 0.2,
+						render: {
+							visible: false
+						}
+					}
+				});
+
+				mouse.element.removeEventListener('wheel', mouse.mousewheel);
+				mouse.element.removeEventListener('DOMMouseScroll', mouse.mousewheel);
+
+				Composite.add(world, mouseConstraint);
+				render.mouse = mouse;
+			}
+
+
+
+
+			ScrollTrigger.create({
+				trigger: '.skill',
+				start: 'top center',
+				once: true,
+				onEnter: () => initSkillMatter()
+			});
+
+
+
+
+
+
+			// === Global ScrollTrigger Refresh ===
 			window.addEventListener('load', () => {
 				ScrollTrigger.refresh();
 			});
-
 
 		})
 	</script>
